--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js | pino-pretty",
+    "start": "node src/index.js --experimental-json-modules",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint",
     "format": "prettier -w src/**/*.js"
