--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,13 +6,14 @@ on:
 
 jobs:
   deploy:
-    - name: Deploy using ssh
-      uses: appleboy/ssh-action@c1965ddd2563844fddc1ec01cafc798365706143
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.PRIVATE_KEY }}
-        port: ${{ secrets.PORT }}
-        script: |
-          cd $HOME/cabana-gamingowa-bot
-          ./deploy.sh
+    steps:
+      - name: Deploy using ssh
+        uses: appleboy/ssh-action@c1965ddd2563844fddc1ec01cafc798365706143
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          port: ${{ secrets.PORT }}
+          script: |
+            cd $HOME/cabana-gamingowa-bot
+            ./deploy.sh
