--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   deploy:
+    runs-on: ubuntu-latest
     steps:
       - name: Deploy using ssh
         uses: appleboy/ssh-action@c1965ddd2563844fddc1ec01cafc798365706143
